<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_dark"
    android:id="@+id/container"
    tools:context=".AlarmConfirmActivity" >

    <ImageView
        android:id="@+id/iv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:paddingBottom="8dp"
        android:paddingLeft="18dp"
        android:paddingRight="12dp"
        android:paddingTop="28dp"
        android:src="@drawable/info" />

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="6dp"
        android:layout_toRightOf="@id/iv_info"
        android:paddingTop="18dp"
        android:text="@string/for_help_confirm_tips"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white_text" />

    <EditText
        android:id="@+id/edit_description_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tips"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/dialog_edit_bk"
        android:hint="@string/description_word"
        android:paddingLeft="13dp"
        android:textColor="@color/dark_text"
        android:textCursorDrawable="@null" />

    <LinearLayout
        android:id="@+id/llayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_description_word"
        android:layout_marginTop="8dp"
        android:background="@drawable/dialog_bottom"
        android:orientation="horizontal"
        android:padding="1dp" >

        <Button
            android:id="@+id/bt_confirm"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_button"
            android:onClick="onClick"
            android:text="@string/send"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_text" />

        <Button
            android:id="@+id/bt_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_button"
            android:onClick="onClick"
            android:text="@string/cancel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_text" />
    </LinearLayout>

</RelativeLayout>